Refactor mouse event handling in `ECMA48Terminal`: consolidate case blocks, streamline `params` access, and eliminate redundancy for improved clarity and maintainability.